parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> aux_pr variable process aux_main block END
Rule 2     aux_pr -> PROGRAM
Rule 3     aux_main -> MAIN
Rule 4     variable -> DIM repeat_id AS type repeat_size end_var variable
Rule 5     variable -> empty
Rule 6     repeat_id -> ID COMMA repeat_id
Rule 7     repeat_id -> ID
Rule 8     type -> TY_INT
Rule 9     type -> TY_FLOAT
Rule 10    type -> TY_STRING
Rule 11    repeat_size -> LBRACKET INT RBRACKET repeat_size
Rule 12    repeat_size -> empty
Rule 13    end_var -> empty
Rule 14    block -> repeat_state
Rule 15    repeat_state -> statement repeat_state
Rule 16    repeat_state -> empty
Rule 17    process -> PROCEDURE aux_id variable block fin_proc process
Rule 18    process -> empty
Rule 19    aux_id -> ID
Rule 20    fin_proc -> RETURN
Rule 21    statement -> GOTO ID
Rule 22    statement -> ID
Rule 23    statement -> GOSUB ID
Rule 24    statement -> LET var EQUALS expression
Rule 25    var -> ID repeat_size_v
Rule 26    repeat_size_v -> aux_ar2
Rule 27    repeat_size_v -> empty
Rule 28    aux_ar2 -> LBRACKET expression else_size RBRACKET
Rule 29    else_size -> COMMA expression else_size
Rule 30    else_size -> empty
Rule 31    statement -> FOR aux_F1 expression aux_F2 TO expression aux_F3 repeat_state NEXT aux_F4
Rule 32    aux_F1 -> ID EQUALS
Rule 33    aux_F2 -> empty
Rule 34    aux_F3 -> empty
Rule 35    aux_F4 -> ID
Rule 36    statement -> WHILE aux_w1 expression aux_w2 DO repeat_state WEND aux_w3
Rule 37    aux_w1 -> empty
Rule 38    aux_w2 -> empty
Rule 39    aux_w3 -> empty
Rule 40    statement -> DO aux_d1 repeat_state LOOP WHILE expression aux_d2
Rule 41    aux_d1 -> empty
Rule 42    aux_d2 -> empty
Rule 43    statement -> IF expression aux_if1 THEN repeat_state ELSE aux_if2 repeat_state END IF aux_if3
Rule 44    aux_if1 -> empty
Rule 45    aux_if2 -> empty
Rule 46    aux_if3 -> empty
Rule 47    statement -> INPUT repeat_elem
Rule 48    statement -> PRINT repeat_elem
Rule 49    repeat_elem -> elem COMMA repeat_elem
Rule 50    repeat_elem -> elem
Rule 51    elem -> STRING
Rule 52    elem -> FLOAT
Rule 53    elem -> INT
Rule 54    elem -> var
Rule 55    expression -> first_exp GREATERTHAN first_exp
Rule 56    expression -> first_exp GREATEROREQUAL first_exp
Rule 57    expression -> first_exp LESSTHAN first_exp
Rule 58    expression -> first_exp LESSOREQUAL first_exp
Rule 59    expression -> first_exp ISEQUAL first_exp
Rule 60    expression -> first_exp ISNOTEQUAL first_exp
Rule 61    expression -> first_exp
Rule 62    first_exp -> term
Rule 63    first_exp -> first_exp SUM term
Rule 64    first_exp -> first_exp SUB term
Rule 65    first_exp -> first_exp OR term
Rule 66    term -> factor
Rule 67    term -> term MULT factor
Rule 68    term -> term DIV factor
Rule 69    term -> term AND factor
Rule 70    factor -> other_fact
Rule 71    factor -> NOT other_fact
Rule 72    other_fact -> elem
Rule 73    other_fact -> LPAR expression RPAR
Rule 74    empty -> <empty>

Terminals, with rules where they appear

AND                  : 69
AS                   : 4
COMMA                : 6 29 49
DIM                  : 4
DIV                  : 68
DO                   : 36 40
ELSE                 : 43
END                  : 1 43
EQUALS               : 24 32
FLOAT                : 52
FOR                  : 31
GOSUB                : 23
GOTO                 : 21
GREATEROREQUAL       : 56
GREATERTHAN          : 55
ID                   : 6 7 19 21 22 23 25 32 35
IF                   : 43 43
INPUT                : 47
INT                  : 11 53
ISEQUAL              : 59
ISNOTEQUAL           : 60
LBRACKET             : 11 28
LESSOREQUAL          : 58
LESSTHAN             : 57
LET                  : 24
LOOP                 : 40
LPAR                 : 73
MAIN                 : 3
MULT                 : 67
NEXT                 : 31
NOT                  : 71
OR                   : 65
PRINT                : 48
PROCEDURE            : 17
PROGRAM              : 2
RBRACKET             : 11 28
RETURN               : 20
RPAR                 : 73
STRING               : 51
SUB                  : 64
SUM                  : 63
THEN                 : 43
TO                   : 31
TY_FLOAT             : 9
TY_INT               : 8
TY_STRING            : 10
WEND                 : 36
WHILE                : 36 40
error                : 

Nonterminals, with rules where they appear

aux_F1               : 31
aux_F2               : 31
aux_F3               : 31
aux_F4               : 31
aux_ar2              : 26
aux_d1               : 40
aux_d2               : 40
aux_id               : 17
aux_if1              : 43
aux_if2              : 43
aux_if3              : 43
aux_main             : 1
aux_pr               : 1
aux_w1               : 36
aux_w2               : 36
aux_w3               : 36
block                : 1 17
elem                 : 49 50 72
else_size            : 28 29
empty                : 5 12 13 16 18 27 30 33 34 37 38 39 41 42 44 45 46
end_var              : 4
expression           : 24 28 29 31 31 36 40 43 73
factor               : 66 67 68 69
fin_proc             : 17
first_exp            : 55 55 56 56 57 57 58 58 59 59 60 60 61 63 64 65
other_fact           : 70 71
process              : 1 17
programa             : 0
repeat_elem          : 47 48 49
repeat_id            : 4 6
repeat_size          : 4 11
repeat_size_v        : 25
repeat_state         : 14 15 31 36 40 43 43
statement            : 15
term                 : 62 63 64 65 67 68 69
type                 : 4
var                  : 24 54
variable             : 1 4 17

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . aux_pr variable process aux_main block END
    (2) aux_pr -> . PROGRAM

    PROGRAM         shift and go to state 3

    programa                       shift and go to state 1
    aux_pr                         shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> aux_pr . variable process aux_main block END
    (4) variable -> . DIM repeat_id AS type repeat_size end_var variable
    (5) variable -> . empty
    (74) empty -> .

    DIM             shift and go to state 5
    PROCEDURE       reduce using rule 74 (empty -> .)
    MAIN            reduce using rule 74 (empty -> .)

    variable                       shift and go to state 4
    empty                          shift and go to state 6

state 3

    (2) aux_pr -> PROGRAM .

    DIM             reduce using rule 2 (aux_pr -> PROGRAM .)
    PROCEDURE       reduce using rule 2 (aux_pr -> PROGRAM .)
    MAIN            reduce using rule 2 (aux_pr -> PROGRAM .)


state 4

    (1) programa -> aux_pr variable . process aux_main block END
    (17) process -> . PROCEDURE aux_id variable block fin_proc process
    (18) process -> . empty
    (74) empty -> .

    PROCEDURE       shift and go to state 8
    MAIN            reduce using rule 74 (empty -> .)

    process                        shift and go to state 7
    empty                          shift and go to state 9

state 5

    (4) variable -> DIM . repeat_id AS type repeat_size end_var variable
    (6) repeat_id -> . ID COMMA repeat_id
    (7) repeat_id -> . ID

    ID              shift and go to state 11

    repeat_id                      shift and go to state 10

state 6

    (5) variable -> empty .

    PROCEDURE       reduce using rule 5 (variable -> empty .)
    MAIN            reduce using rule 5 (variable -> empty .)
    GOTO            reduce using rule 5 (variable -> empty .)
    ID              reduce using rule 5 (variable -> empty .)
    GOSUB           reduce using rule 5 (variable -> empty .)
    LET             reduce using rule 5 (variable -> empty .)
    FOR             reduce using rule 5 (variable -> empty .)
    WHILE           reduce using rule 5 (variable -> empty .)
    DO              reduce using rule 5 (variable -> empty .)
    IF              reduce using rule 5 (variable -> empty .)
    INPUT           reduce using rule 5 (variable -> empty .)
    PRINT           reduce using rule 5 (variable -> empty .)
    RETURN          reduce using rule 5 (variable -> empty .)


state 7

    (1) programa -> aux_pr variable process . aux_main block END
    (3) aux_main -> . MAIN

    MAIN            shift and go to state 13

    aux_main                       shift and go to state 12

state 8

    (17) process -> PROCEDURE . aux_id variable block fin_proc process
    (19) aux_id -> . ID

    ID              shift and go to state 15

    aux_id                         shift and go to state 14

state 9

    (18) process -> empty .

    MAIN            reduce using rule 18 (process -> empty .)


state 10

    (4) variable -> DIM repeat_id . AS type repeat_size end_var variable

    AS              shift and go to state 16


state 11

    (6) repeat_id -> ID . COMMA repeat_id
    (7) repeat_id -> ID .

    COMMA           shift and go to state 17
    AS              reduce using rule 7 (repeat_id -> ID .)


state 12

    (1) programa -> aux_pr variable process aux_main . block END
    (14) block -> . repeat_state
    (15) repeat_state -> . statement repeat_state
    (16) repeat_state -> . empty
    (21) statement -> . GOTO ID
    (22) statement -> . ID
    (23) statement -> . GOSUB ID
    (24) statement -> . LET var EQUALS expression
    (31) statement -> . FOR aux_F1 expression aux_F2 TO expression aux_F3 repeat_state NEXT aux_F4
    (36) statement -> . WHILE aux_w1 expression aux_w2 DO repeat_state WEND aux_w3
    (40) statement -> . DO aux_d1 repeat_state LOOP WHILE expression aux_d2
    (43) statement -> . IF expression aux_if1 THEN repeat_state ELSE aux_if2 repeat_state END IF aux_if3
    (47) statement -> . INPUT repeat_elem
    (48) statement -> . PRINT repeat_elem
    (74) empty -> .

    GOTO            shift and go to state 22
    ID              shift and go to state 23
    GOSUB           shift and go to state 24
    LET             shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    IF              shift and go to state 29
    INPUT           shift and go to state 30
    PRINT           shift and go to state 31
    END             reduce using rule 74 (empty -> .)

    block                          shift and go to state 18
    repeat_state                   shift and go to state 19
    statement                      shift and go to state 20
    empty                          shift and go to state 21

state 13

    (3) aux_main -> MAIN .

    GOTO            reduce using rule 3 (aux_main -> MAIN .)
    ID              reduce using rule 3 (aux_main -> MAIN .)
    GOSUB           reduce using rule 3 (aux_main -> MAIN .)
    LET             reduce using rule 3 (aux_main -> MAIN .)
    FOR             reduce using rule 3 (aux_main -> MAIN .)
    WHILE           reduce using rule 3 (aux_main -> MAIN .)
    DO              reduce using rule 3 (aux_main -> MAIN .)
    IF              reduce using rule 3 (aux_main -> MAIN .)
    INPUT           reduce using rule 3 (aux_main -> MAIN .)
    PRINT           reduce using rule 3 (aux_main -> MAIN .)
    END             reduce using rule 3 (aux_main -> MAIN .)


state 14

    (17) process -> PROCEDURE aux_id . variable block fin_proc process
    (4) variable -> . DIM repeat_id AS type repeat_size end_var variable
    (5) variable -> . empty
    (74) empty -> .

    DIM             shift and go to state 5
    GOTO            reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    GOSUB           reduce using rule 74 (empty -> .)
    LET             reduce using rule 74 (empty -> .)
    FOR             reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    DO              reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)
    INPUT           reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)

    variable                       shift and go to state 32
    empty                          shift and go to state 6

state 15

    (19) aux_id -> ID .

    DIM             reduce using rule 19 (aux_id -> ID .)
    GOTO            reduce using rule 19 (aux_id -> ID .)
    ID              reduce using rule 19 (aux_id -> ID .)
    GOSUB           reduce using rule 19 (aux_id -> ID .)
    LET             reduce using rule 19 (aux_id -> ID .)
    FOR             reduce using rule 19 (aux_id -> ID .)
    WHILE           reduce using rule 19 (aux_id -> ID .)
    DO              reduce using rule 19 (aux_id -> ID .)
    IF              reduce using rule 19 (aux_id -> ID .)
    INPUT           reduce using rule 19 (aux_id -> ID .)
    PRINT           reduce using rule 19 (aux_id -> ID .)
    RETURN          reduce using rule 19 (aux_id -> ID .)


state 16

    (4) variable -> DIM repeat_id AS . type repeat_size end_var variable
    (8) type -> . TY_INT
    (9) type -> . TY_FLOAT
    (10) type -> . TY_STRING

    TY_INT          shift and go to state 34
    TY_FLOAT        shift and go to state 35
    TY_STRING       shift and go to state 36

    type                           shift and go to state 33

state 17

    (6) repeat_id -> ID COMMA . repeat_id
    (6) repeat_id -> . ID COMMA repeat_id
    (7) repeat_id -> . ID

    ID              shift and go to state 11

    repeat_id                      shift and go to state 37

state 18

    (1) programa -> aux_pr variable process aux_main block . END

    END             shift and go to state 38


state 19

    (14) block -> repeat_state .

    END             reduce using rule 14 (block -> repeat_state .)
    RETURN          reduce using rule 14 (block -> repeat_state .)


state 20

    (15) repeat_state -> statement . repeat_state
    (15) repeat_state -> . statement repeat_state
    (16) repeat_state -> . empty
    (21) statement -> . GOTO ID
    (22) statement -> . ID
    (23) statement -> . GOSUB ID
    (24) statement -> . LET var EQUALS expression
    (31) statement -> . FOR aux_F1 expression aux_F2 TO expression aux_F3 repeat_state NEXT aux_F4
    (36) statement -> . WHILE aux_w1 expression aux_w2 DO repeat_state WEND aux_w3
    (40) statement -> . DO aux_d1 repeat_state LOOP WHILE expression aux_d2
    (43) statement -> . IF expression aux_if1 THEN repeat_state ELSE aux_if2 repeat_state END IF aux_if3
    (47) statement -> . INPUT repeat_elem
    (48) statement -> . PRINT repeat_elem
    (74) empty -> .

    GOTO            shift and go to state 22
    ID              shift and go to state 23
    GOSUB           shift and go to state 24
    LET             shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    IF              shift and go to state 29
    INPUT           shift and go to state 30
    PRINT           shift and go to state 31
    END             reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)
    LOOP            reduce using rule 74 (empty -> .)
    ELSE            reduce using rule 74 (empty -> .)
    WEND            reduce using rule 74 (empty -> .)
    NEXT            reduce using rule 74 (empty -> .)

    statement                      shift and go to state 20
    repeat_state                   shift and go to state 39
    empty                          shift and go to state 21

state 21

    (16) repeat_state -> empty .

    END             reduce using rule 16 (repeat_state -> empty .)
    RETURN          reduce using rule 16 (repeat_state -> empty .)
    LOOP            reduce using rule 16 (repeat_state -> empty .)
    ELSE            reduce using rule 16 (repeat_state -> empty .)
    WEND            reduce using rule 16 (repeat_state -> empty .)
    NEXT            reduce using rule 16 (repeat_state -> empty .)


state 22

    (21) statement -> GOTO . ID

    ID              shift and go to state 40


state 23

    (22) statement -> ID .

    GOTO            reduce using rule 22 (statement -> ID .)
    ID              reduce using rule 22 (statement -> ID .)
    GOSUB           reduce using rule 22 (statement -> ID .)
    LET             reduce using rule 22 (statement -> ID .)
    FOR             reduce using rule 22 (statement -> ID .)
    WHILE           reduce using rule 22 (statement -> ID .)
    DO              reduce using rule 22 (statement -> ID .)
    IF              reduce using rule 22 (statement -> ID .)
    INPUT           reduce using rule 22 (statement -> ID .)
    PRINT           reduce using rule 22 (statement -> ID .)
    END             reduce using rule 22 (statement -> ID .)
    RETURN          reduce using rule 22 (statement -> ID .)
    LOOP            reduce using rule 22 (statement -> ID .)
    ELSE            reduce using rule 22 (statement -> ID .)
    WEND            reduce using rule 22 (statement -> ID .)
    NEXT            reduce using rule 22 (statement -> ID .)


state 24

    (23) statement -> GOSUB . ID

    ID              shift and go to state 41


state 25

    (24) statement -> LET . var EQUALS expression
    (25) var -> . ID repeat_size_v

    ID              shift and go to state 43

    var                            shift and go to state 42

state 26

    (31) statement -> FOR . aux_F1 expression aux_F2 TO expression aux_F3 repeat_state NEXT aux_F4
    (32) aux_F1 -> . ID EQUALS

    ID              shift and go to state 45

    aux_F1                         shift and go to state 44

state 27

    (36) statement -> WHILE . aux_w1 expression aux_w2 DO repeat_state WEND aux_w3
    (37) aux_w1 -> . empty
    (74) empty -> .

    NOT             reduce using rule 74 (empty -> .)
    LPAR            reduce using rule 74 (empty -> .)
    STRING          reduce using rule 74 (empty -> .)
    FLOAT           reduce using rule 74 (empty -> .)
    INT             reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)

    aux_w1                         shift and go to state 46
    empty                          shift and go to state 47

state 28

    (40) statement -> DO . aux_d1 repeat_state LOOP WHILE expression aux_d2
    (41) aux_d1 -> . empty
    (74) empty -> .

    GOTO            reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    GOSUB           reduce using rule 74 (empty -> .)
    LET             reduce using rule 74 (empty -> .)
    FOR             reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    DO              reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)
    INPUT           reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    LOOP            reduce using rule 74 (empty -> .)

    aux_d1                         shift and go to state 48
    empty                          shift and go to state 49

state 29

    (43) statement -> IF . expression aux_if1 THEN repeat_state ELSE aux_if2 repeat_state END IF aux_if3
    (55) expression -> . first_exp GREATERTHAN first_exp
    (56) expression -> . first_exp GREATEROREQUAL first_exp
    (57) expression -> . first_exp LESSTHAN first_exp
    (58) expression -> . first_exp LESSOREQUAL first_exp
    (59) expression -> . first_exp ISEQUAL first_exp
    (60) expression -> . first_exp ISNOTEQUAL first_exp
    (61) expression -> . first_exp
    (62) first_exp -> . term
    (63) first_exp -> . first_exp SUM term
    (64) first_exp -> . first_exp SUB term
    (65) first_exp -> . first_exp OR term
    (66) term -> . factor
    (67) term -> . term MULT factor
    (68) term -> . term DIV factor
    (69) term -> . term AND factor
    (70) factor -> . other_fact
    (71) factor -> . NOT other_fact
    (72) other_fact -> . elem
    (73) other_fact -> . LPAR expression RPAR
    (51) elem -> . STRING
    (52) elem -> . FLOAT
    (53) elem -> . INT
    (54) elem -> . var
    (25) var -> . ID repeat_size_v

    NOT             shift and go to state 55
    LPAR            shift and go to state 57
    STRING          shift and go to state 58
    FLOAT           shift and go to state 59
    INT             shift and go to state 60
    ID              shift and go to state 43

    expression                     shift and go to state 50
    first_exp                      shift and go to state 51
    term                           shift and go to state 52
    factor                         shift and go to state 53
    other_fact                     shift and go to state 54
    elem                           shift and go to state 56
    var                            shift and go to state 61

state 30

    (47) statement -> INPUT . repeat_elem
    (49) repeat_elem -> . elem COMMA repeat_elem
    (50) repeat_elem -> . elem
    (51) elem -> . STRING
    (52) elem -> . FLOAT
    (53) elem -> . INT
    (54) elem -> . var
    (25) var -> . ID repeat_size_v

    STRING          shift and go to state 58
    FLOAT           shift and go to state 59
    INT             shift and go to state 60
    ID              shift and go to state 43

    repeat_elem                    shift and go to state 62
    elem                           shift and go to state 63
    var                            shift and go to state 61

state 31

    (48) statement -> PRINT . repeat_elem
    (49) repeat_elem -> . elem COMMA repeat_elem
    (50) repeat_elem -> . elem
    (51) elem -> . STRING
    (52) elem -> . FLOAT
    (53) elem -> . INT
    (54) elem -> . var
    (25) var -> . ID repeat_size_v

    STRING          shift and go to state 58
    FLOAT           shift and go to state 59
    INT             shift and go to state 60
    ID              shift and go to state 43

    repeat_elem                    shift and go to state 64
    elem                           shift and go to state 63
    var                            shift and go to state 61

state 32

    (17) process -> PROCEDURE aux_id variable . block fin_proc process
    (14) block -> . repeat_state
    (15) repeat_state -> . statement repeat_state
    (16) repeat_state -> . empty
    (21) statement -> . GOTO ID
    (22) statement -> . ID
    (23) statement -> . GOSUB ID
    (24) statement -> . LET var EQUALS expression
    (31) statement -> . FOR aux_F1 expression aux_F2 TO expression aux_F3 repeat_state NEXT aux_F4
    (36) statement -> . WHILE aux_w1 expression aux_w2 DO repeat_state WEND aux_w3
    (40) statement -> . DO aux_d1 repeat_state LOOP WHILE expression aux_d2
    (43) statement -> . IF expression aux_if1 THEN repeat_state ELSE aux_if2 repeat_state END IF aux_if3
    (47) statement -> . INPUT repeat_elem
    (48) statement -> . PRINT repeat_elem
    (74) empty -> .

    GOTO            shift and go to state 22
    ID              shift and go to state 23
    GOSUB           shift and go to state 24
    LET             shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    IF              shift and go to state 29
    INPUT           shift and go to state 30
    PRINT           shift and go to state 31
    RETURN          reduce using rule 74 (empty -> .)

    block                          shift and go to state 65
    repeat_state                   shift and go to state 19
    statement                      shift and go to state 20
    empty                          shift and go to state 21

state 33

    (4) variable -> DIM repeat_id AS type . repeat_size end_var variable
    (11) repeat_size -> . LBRACKET INT RBRACKET repeat_size
    (12) repeat_size -> . empty
    (74) empty -> .

    LBRACKET        shift and go to state 67
    DIM             reduce using rule 74 (empty -> .)
    PROCEDURE       reduce using rule 74 (empty -> .)
    MAIN            reduce using rule 74 (empty -> .)
    GOTO            reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    GOSUB           reduce using rule 74 (empty -> .)
    LET             reduce using rule 74 (empty -> .)
    FOR             reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    DO              reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)
    INPUT           reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)

    repeat_size                    shift and go to state 66
    empty                          shift and go to state 68

state 34

    (8) type -> TY_INT .

    LBRACKET        reduce using rule 8 (type -> TY_INT .)
    DIM             reduce using rule 8 (type -> TY_INT .)
    PROCEDURE       reduce using rule 8 (type -> TY_INT .)
    MAIN            reduce using rule 8 (type -> TY_INT .)
    GOTO            reduce using rule 8 (type -> TY_INT .)
    ID              reduce using rule 8 (type -> TY_INT .)
    GOSUB           reduce using rule 8 (type -> TY_INT .)
    LET             reduce using rule 8 (type -> TY_INT .)
    FOR             reduce using rule 8 (type -> TY_INT .)
    WHILE           reduce using rule 8 (type -> TY_INT .)
    DO              reduce using rule 8 (type -> TY_INT .)
    IF              reduce using rule 8 (type -> TY_INT .)
    INPUT           reduce using rule 8 (type -> TY_INT .)
    PRINT           reduce using rule 8 (type -> TY_INT .)
    RETURN          reduce using rule 8 (type -> TY_INT .)


state 35

    (9) type -> TY_FLOAT .

    LBRACKET        reduce using rule 9 (type -> TY_FLOAT .)
    DIM             reduce using rule 9 (type -> TY_FLOAT .)
    PROCEDURE       reduce using rule 9 (type -> TY_FLOAT .)
    MAIN            reduce using rule 9 (type -> TY_FLOAT .)
    GOTO            reduce using rule 9 (type -> TY_FLOAT .)
    ID              reduce using rule 9 (type -> TY_FLOAT .)
    GOSUB           reduce using rule 9 (type -> TY_FLOAT .)
    LET             reduce using rule 9 (type -> TY_FLOAT .)
    FOR             reduce using rule 9 (type -> TY_FLOAT .)
    WHILE           reduce using rule 9 (type -> TY_FLOAT .)
    DO              reduce using rule 9 (type -> TY_FLOAT .)
    IF              reduce using rule 9 (type -> TY_FLOAT .)
    INPUT           reduce using rule 9 (type -> TY_FLOAT .)
    PRINT           reduce using rule 9 (type -> TY_FLOAT .)
    RETURN          reduce using rule 9 (type -> TY_FLOAT .)


state 36

    (10) type -> TY_STRING .

    LBRACKET        reduce using rule 10 (type -> TY_STRING .)
    DIM             reduce using rule 10 (type -> TY_STRING .)
    PROCEDURE       reduce using rule 10 (type -> TY_STRING .)
    MAIN            reduce using rule 10 (type -> TY_STRING .)
    GOTO            reduce using rule 10 (type -> TY_STRING .)
    ID              reduce using rule 10 (type -> TY_STRING .)
    GOSUB           reduce using rule 10 (type -> TY_STRING .)
    LET             reduce using rule 10 (type -> TY_STRING .)
    FOR             reduce using rule 10 (type -> TY_STRING .)
    WHILE           reduce using rule 10 (type -> TY_STRING .)
    DO              reduce using rule 10 (type -> TY_STRING .)
    IF              reduce using rule 10 (type -> TY_STRING .)
    INPUT           reduce using rule 10 (type -> TY_STRING .)
    PRINT           reduce using rule 10 (type -> TY_STRING .)
    RETURN          reduce using rule 10 (type -> TY_STRING .)


state 37

    (6) repeat_id -> ID COMMA repeat_id .

    AS              reduce using rule 6 (repeat_id -> ID COMMA repeat_id .)


state 38

    (1) programa -> aux_pr variable process aux_main block END .

    $end            reduce using rule 1 (programa -> aux_pr variable process aux_main block END .)


state 39

    (15) repeat_state -> statement repeat_state .

    END             reduce using rule 15 (repeat_state -> statement repeat_state .)
    RETURN          reduce using rule 15 (repeat_state -> statement repeat_state .)
    LOOP            reduce using rule 15 (repeat_state -> statement repeat_state .)
    ELSE            reduce using rule 15 (repeat_state -> statement repeat_state .)
    WEND            reduce using rule 15 (repeat_state -> statement repeat_state .)
    NEXT            reduce using rule 15 (repeat_state -> statement repeat_state .)


state 40

    (21) statement -> GOTO ID .

    GOTO            reduce using rule 21 (statement -> GOTO ID .)
    ID              reduce using rule 21 (statement -> GOTO ID .)
    GOSUB           reduce using rule 21 (statement -> GOTO ID .)
    LET             reduce using rule 21 (statement -> GOTO ID .)
    FOR             reduce using rule 21 (statement -> GOTO ID .)
    WHILE           reduce using rule 21 (statement -> GOTO ID .)
    DO              reduce using rule 21 (statement -> GOTO ID .)
    IF              reduce using rule 21 (statement -> GOTO ID .)
    INPUT           reduce using rule 21 (statement -> GOTO ID .)
    PRINT           reduce using rule 21 (statement -> GOTO ID .)
    END             reduce using rule 21 (statement -> GOTO ID .)
    RETURN          reduce using rule 21 (statement -> GOTO ID .)
    LOOP            reduce using rule 21 (statement -> GOTO ID .)
    ELSE            reduce using rule 21 (statement -> GOTO ID .)
    WEND            reduce using rule 21 (statement -> GOTO ID .)
    NEXT            reduce using rule 21 (statement -> GOTO ID .)


state 41

    (23) statement -> GOSUB ID .

    GOTO            reduce using rule 23 (statement -> GOSUB ID .)
    ID              reduce using rule 23 (statement -> GOSUB ID .)
    GOSUB           reduce using rule 23 (statement -> GOSUB ID .)
    LET             reduce using rule 23 (statement -> GOSUB ID .)
    FOR             reduce using rule 23 (statement -> GOSUB ID .)
    WHILE           reduce using rule 23 (statement -> GOSUB ID .)
    DO              reduce using rule 23 (statement -> GOSUB ID .)
    IF              reduce using rule 23 (statement -> GOSUB ID .)
    INPUT           reduce using rule 23 (statement -> GOSUB ID .)
    PRINT           reduce using rule 23 (statement -> GOSUB ID .)
    END             reduce using rule 23 (statement -> GOSUB ID .)
    RETURN          reduce using rule 23 (statement -> GOSUB ID .)
    LOOP            reduce using rule 23 (statement -> GOSUB ID .)
    ELSE            reduce using rule 23 (statement -> GOSUB ID .)
    WEND            reduce using rule 23 (statement -> GOSUB ID .)
    NEXT            reduce using rule 23 (statement -> GOSUB ID .)


state 42

    (24) statement -> LET var . EQUALS expression

    EQUALS          shift and go to state 69


state 43

    (25) var -> ID . repeat_size_v
    (26) repeat_size_v -> . aux_ar2
    (27) repeat_size_v -> . empty
    (28) aux_ar2 -> . LBRACKET expression else_size RBRACKET
    (74) empty -> .

    LBRACKET        shift and go to state 73
    EQUALS          reduce using rule 74 (empty -> .)
    MULT            reduce using rule 74 (empty -> .)
    DIV             reduce using rule 74 (empty -> .)
    AND             reduce using rule 74 (empty -> .)
    GREATERTHAN     reduce using rule 74 (empty -> .)
    GREATEROREQUAL  reduce using rule 74 (empty -> .)
    LESSTHAN        reduce using rule 74 (empty -> .)
    LESSOREQUAL     reduce using rule 74 (empty -> .)
    ISEQUAL         reduce using rule 74 (empty -> .)
    ISNOTEQUAL      reduce using rule 74 (empty -> .)
    SUM             reduce using rule 74 (empty -> .)
    SUB             reduce using rule 74 (empty -> .)
    OR              reduce using rule 74 (empty -> .)
    THEN            reduce using rule 74 (empty -> .)
    COMMA           reduce using rule 74 (empty -> .)
    GOTO            reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    GOSUB           reduce using rule 74 (empty -> .)
    LET             reduce using rule 74 (empty -> .)
    FOR             reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    DO              reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)
    INPUT           reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    END             reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)
    LOOP            reduce using rule 74 (empty -> .)
    ELSE            reduce using rule 74 (empty -> .)
    WEND            reduce using rule 74 (empty -> .)
    NEXT            reduce using rule 74 (empty -> .)
    TO              reduce using rule 74 (empty -> .)
    RPAR            reduce using rule 74 (empty -> .)
    RBRACKET        reduce using rule 74 (empty -> .)

    repeat_size_v                  shift and go to state 70
    aux_ar2                        shift and go to state 71
    empty                          shift and go to state 72

state 44

    (31) statement -> FOR aux_F1 . expression aux_F2 TO expression aux_F3 repeat_state NEXT aux_F4
    (55) expression -> . first_exp GREATERTHAN first_exp
    (56) expression -> . first_exp GREATEROREQUAL first_exp
    (57) expression -> . first_exp LESSTHAN first_exp
    (58) expression -> . first_exp LESSOREQUAL first_exp
    (59) expression -> . first_exp ISEQUAL first_exp
    (60) expression -> . first_exp ISNOTEQUAL first_exp
    (61) expression -> . first_exp
    (62) first_exp -> . term
    (63) first_exp -> . first_exp SUM term
    (64) first_exp -> . first_exp SUB term
    (65) first_exp -> . first_exp OR term
    (66) term -> . factor
    (67) term -> . term MULT factor
    (68) term -> . term DIV factor
    (69) term -> . term AND factor
    (70) factor -> . other_fact
    (71) factor -> . NOT other_fact
    (72) other_fact -> . elem
    (73) other_fact -> . LPAR expression RPAR
    (51) elem -> . STRING
    (52) elem -> . FLOAT
    (53) elem -> . INT
    (54) elem -> . var
    (25) var -> . ID repeat_size_v

    NOT             shift and go to state 55
    LPAR            shift and go to state 57
    STRING          shift and go to state 58
    FLOAT           shift and go to state 59
    INT             shift and go to state 60
    ID              shift and go to state 43

    expression                     shift and go to state 74
    first_exp                      shift and go to state 51
    term                           shift and go to state 52
    factor                         shift and go to state 53
    other_fact                     shift and go to state 54
    elem                           shift and go to state 56
    var                            shift and go to state 61

state 45

    (32) aux_F1 -> ID . EQUALS

    EQUALS          shift and go to state 75


state 46

    (36) statement -> WHILE aux_w1 . expression aux_w2 DO repeat_state WEND aux_w3
    (55) expression -> . first_exp GREATERTHAN first_exp
    (56) expression -> . first_exp GREATEROREQUAL first_exp
    (57) expression -> . first_exp LESSTHAN first_exp
    (58) expression -> . first_exp LESSOREQUAL first_exp
    (59) expression -> . first_exp ISEQUAL first_exp
    (60) expression -> . first_exp ISNOTEQUAL first_exp
    (61) expression -> . first_exp
